# vlm-node

./: .env  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  build-rust.sh  docker-compose.yml  docker-entrypoint.sh  requirements.txt
.github/workflows/: build-all.yml  build-and-deploy.yml  build-rust.yml  build-server-worker.yml  build-server.yaml  build-server.yml  build-ui.yaml  build-ui.yml  build-worker.yaml  build-worker.yml  release.yml  rust-workflow.yml
ai/: Dockerfile  jobs.py  logger_config.py  main.py  requirements.txt  vlm.py  worker.py
charts/compute-node/: Chart.yaml  values.yaml
charts/compute-node/templates/: _helpers.tpl  configmap.yaml  ingress.yaml  persistentvolumeclaim.yaml  secret.yaml  server-statefulset.yaml  serviceaccount.yaml  services.yaml  statefulset.yaml  ui-deployment.yaml  worker-statefulset.yaml
charts/vlm-node/: Chart.yaml  README.md  values.yaml
charts/vlm-node/templates/: _helpers.tpl  configmap.yaml  ingress.yaml  persistentvolumeclaim.yaml  secret.yaml  serviceaccount.yaml  services.yaml  statefulset.yaml  ui-deployment.yaml
migrations/: 20250806012855_add_jobs.down.sql  20250806012855_add_jobs.up.sql
server/: Cargo.toml  Dockerfile
server/migrations/: 20250806012855_add_jobs.up.sql  20250818130542_add_domain_id_and_query.down.sql  20250818130542_add_domain_id_and_query.up.sql
server/src/: config.rs  domain.rs  http.rs  main.rs  models.rs  ollama_client.rs  pg.rs  stream.rs
ui/: .dockerignore  .eslintrc.js  Dockerfile  README.md  add.html  config.js  index.html  nginx-default.conf  package-lock.json  package.json  vite.config.js
ui/src/css/: add.css  styles.css
ui/src/js/: add.js  config.js  jobManager.js  main.js  uiManager.js
worker/: Dockerfile  jobs.py  main.py  requirements.txt  vlm.py
