[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = "1.0.219"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.47.1", features = ["full"] }

[profile.release]
strip = true
