[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
actix-ws = "0.3.0"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
futures-util = "0.3.31"
hostname = "0.4.1"
machine-uid = "0.5.3"
posemesh-domain-http = "0.1.11"
reqwest = { version = "0.12.23", default-features = false, features = ["stream"] }
serde = "1.0.219"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.17.0", features = ["v4"] }

[profile.release]
strip = true

[dev-dependencies]
actix-http = { version = "3.11.1", features = ["ws"] }
actix-test = "0.1.5"
actix-web-actors = "4.3.1"
awc = "3.7.0"
